# AI-QA-System

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  log  pyproject.toml
app/: __init__.py  auth.py  cli.py  config.py  container.py  db.py  dependencies.py  domain.py  main.py  repositories.py  schemas.py  utils.py
app/parsers/: __init__.py  base.py  docx_parser.py  ocr_utils.py  pdf_parser.py  pptx_parser.py  service.py
app/routers/: __init__.py  api_admin.py  api_chat.py  api_robot.py  pages.py
app/services/: chat.py  llm.py  (+10 more)
docs/: codex-decisions.md  codex-dialogs.md  codex-handoff.md  codex-plan.md  thread-answer-minimal-eval.json  thread-answer-report.md  thread-answer-wrong-release-report.md  thread-eval-formal-acceptance-template.md  thread-eval-formal-single-group-report.md  thread-eval-full-kb-minimal-regression-report.md  thread-eval-report.md  thread-eval-smoke-gate-rerun-report.md  thread-infra-report.md  thread-parser-anomaly-list.md  thread-parser-parse-only-no-ocr.json  thread-parser-parse-only-with-ocr.json  thread-parser-report.md  thread-retrieval-diagnosis.json  thread-retrieval-report.md
robot_bridge/: README.md  bridge.py  g1_client.py
scripts/: comprehensive_test.py  configure_ragflow_models.py  inspect_ppt_parse.py  local_embedding_service.py  reindex_all.py  run_eval.py  run_retrieval_diagnosis.py  setup_conda_env.sh  setup_ragflow_source.sh  start_ragflow_base.sh  start_ragflow_source.sh  stop_ragflow_source.sh
tests/: conftest.py  test_api_flow.py  test_parsers.py  test_retrieval_diagnosis.py  test_robot_bridge.py
(+59 files in other folders)
