[project]
name = "knowledge-base-qa"
version = "0.1.0"
description = "Knowledge-grounded Q&A system with FastAPI, SQLite FTS5, and ChromaDB."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.23",
  "fastapi>=0.115.8",
  "huggingface_hub>=0.32.4",
  "httpx>=0.28.1",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.6",
  "mammoth>=1.9.0",
  "markdownify>=1.1.0",
  "numpy>=1.26.4",
  "openai>=1.82.0",
  "pydantic-settings>=2.9.1",
  "pymupdf>=1.26.0",
  "python-multipart>=0.0.20",
  "python-pptx>=1.0.2",
  "transformers<5",
  "uvicorn[standard]>=0.34.2",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
ml = []
ocr = [
  "paddleocr>=2.8.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "python-docx>=1.1.2",
  "reportlab>=4.4.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
